app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: app1
  labels: { app: web }
spec:
  type: ClusterIP
  selector: { app: web }
  ports:
    - name: http
      port: 80
      targetPort: 80
